--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
+    "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
