--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^5.12.8",
+    "date-fns": "^2.29.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "~0.13.4",
